updated to better match login page on project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://richardlee19.githib.io/testofdoodles",
+  "homepage": "https://richardlee19.github.io/testofdoodles/",
   "name": "test-of-doodles",
   "version": "0.1.0",
   "private": true,
